manifests/immich/tailscaleingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server-tailscale
  namespace: immich
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  number: 2283
            path: /
            pathType: Prefix

  tls:
    - hosts:
        - immich
